@@ -9,6 +9,9 @@ import android.view.MenuItem;
 import android.view.MotionEvent;
 import android.view.WindowManager.LayoutParams;
 
+import com.plugin.sdk.utils.AppLogUtils;
+
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
 /**
@@ -16,8 +19,12 @@ import java.lang.reflect.Method;
  * <p>
  * 通过反射加载插件里的 {@code com.plugin.sdk.plugin.ApkProxyActivity}（补丁 dex 已合并进
  * 宿主 ClassLoader），并把宿主占位 Activity 的生命周期反射转发给它。
+ * <p>
+ * 本类不与插件共享类型，契约是「方法名 + 参数签名」，因此插件可以完全不依赖 SDK 独立编译。
  */
 public class ApkPluggingActivityProxy implements ApkInterfaceForProxyActivity {
+
+    private static final String TAG = "ApkPluggingActivityProxy";
 
     private static final String PLUGIN_PROXY_ACTIVITY = "com.plugin.sdk.plugin.ApkProxyActivity";
 
@@ -43,7 +50,7 @@ public class ApkPluggingActivityProxy implements ApkInterfaceForProxyActivity {
 
     public void init() throws Exception {
         Class<?> clazz = Class.forName(PLUGIN_PROXY_ACTIVITY);
-        mProxyObj = clazz.newInstance();
+        mProxyObj = clazz.getDeclaredConstructor().newInstance();
 
         m_onCreate = clazz.getMethod("onCreate", Activity.class, Bundle.class);
         m_onStart = clazz.getMethod("onStart");
@@ -65,115 +72,127 @@ public class ApkPluggingActivityProxy implements ApkInterfaceForProxyActivity {
         m_onOptionsItemSelected = clazz.getMethod("onOptionsItemSelected", MenuItem.class);
     }
 
+    /**
+     * 统一处理插件方法调用失败。
+     * <p>
+     * 插件页面里抛出的异常会被反射包装成 InvocationTargetException，这里拆出真实原因再打日志，
+     * 否则日志里只能看到反射包装层，看不到插件真正的崩溃点。
+     */
+    private static void logFailure(String method, Exception e) {
+        Throwable cause = (e instanceof InvocationTargetException && e.getCause() != null)
+                ? e.getCause() : e;
+        AppLogUtils.e(TAG, "插件 " + method + " 调用失败", cause);
+    }
+
     @Override
     public void onCreate(Activity activity, Bundle savedInstanceState) {
         if (m_onCreate == null) return;
-        try { m_onCreate.invoke(mProxyObj, activity, savedInstanceState); } catch (Exception ignored) {}
+        try { m_onCreate.invoke(mProxyObj, activity, savedInstanceState); } catch (Exception e) { logFailure("onCreate", e); }
     }
 
     @Override
     public void onStart() {
         if (m_onStart == null) return;
-        try { m_onStart.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onStart.invoke(mProxyObj); } catch (Exception e) { logFailure("onStart", e); }
     }
 
     @Override
     public void onRestart() {
         if (m_onRestart == null) return;
-        try { m_onRestart.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onRestart.invoke(mProxyObj); } catch (Exception e) { logFailure("onRestart", e); }
     }
 
     @Override
     public void onActivityResult(int requestCode, int resultCode, Intent data) {
         if (m_onActivityResult == null) return;
-        try { m_onActivityResult.invoke(mProxyObj, requestCode, resultCode, data); } catch (Exception ignored) {}
+        try { m_onActivityResult.invoke(mProxyObj, requestCode, resultCode, data); } catch (Exception e) { logFailure("onActivityResult", e); }
     }
 
     @Override
     public void onResume() {
         if (m_onResume == null) return;
-        try { m_onResume.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onResume.invoke(mProxyObj); } catch (Exception e) { logFailure("onResume", e); }
     }
 
     @Override
     public void onPause() {
         if (m_onPause == null) return;
-        try { m_onPause.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onPause.invoke(mProxyObj); } catch (Exception e) { logFailure("onPause", e); }
     }
 
     @Override
     public void onStop() {
         if (m_onStop == null) return;
-        try { m_onStop.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onStop.invoke(mProxyObj); } catch (Exception e) { logFailure("onStop", e); }
     }
 
     @Override
     public void onDestroy() {
         if (m_onDestroy == null) return;
-        try { m_onDestroy.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onDestroy.invoke(mProxyObj); } catch (Exception e) { logFailure("onDestroy", e); }
     }
 
     @Override
     public void onSaveInstanceState(Bundle outState) {
         if (m_onSaveInstanceState == null) return;
-        try { m_onSaveInstanceState.invoke(mProxyObj, outState); } catch (Exception ignored) {}
+        try { m_onSaveInstanceState.invoke(mProxyObj, outState); } catch (Exception e) { logFailure("onSaveInstanceState", e); }
     }
 
     @Override
     public void onNewIntent(Intent intent) {
         if (m_onNewIntent == null) return;
-        try { m_onNewIntent.invoke(mProxyObj, intent); } catch (Exception ignored) {}
+        try { m_onNewIntent.invoke(mProxyObj, intent); } catch (Exception e) { logFailure("onNewIntent", e); }
     }
 
     @Override
     public void onRestoreInstanceState(Bundle savedInstanceState) {
         if (m_onRestoreInstanceState == null) return;
-        try { m_onRestoreInstanceState.invoke(mProxyObj, savedInstanceState); } catch (Exception ignored) {}
+        try { m_onRestoreInstanceState.invoke(mProxyObj, savedInstanceState); } catch (Exception e) { logFailure("onRestoreInstanceState", e); }
     }
 
     @Override
     public boolean onTouchEvent(MotionEvent event) {
         if (m_onTouchEvent == null) return false;
-        try { return (Boolean) m_onTouchEvent.invoke(mProxyObj, event); } catch (Exception ignored) {}
+        try { return (Boolean) m_onTouchEvent.invoke(mProxyObj, event); } catch (Exception e) { logFailure("onTouchEvent", e); }
         return false;
     }
 
     @Override
     public boolean onKeyUp(int keyCode, KeyEvent event) {
         if (m_onKeyUp == null) return false;
-        try { return (Boolean) m_onKeyUp.invoke(mProxyObj, keyCode, event); } catch (Exception ignored) {}
+        try { return (Boolean) m_onKeyUp.invoke(mProxyObj, keyCode, event); } catch (Exception e) { logFailure("onKeyUp", e); }
         return false;
     }
 
     @Override
     public void onWindowAttributesChanged(LayoutParams params) {
         if (m_onWindowAttributesChanged == null) return;
-        try { m_onWindowAttributesChanged.invoke(mProxyObj, params); } catch (Exception ignored) {}
+        try { m_onWindowAttributesChanged.invoke(mProxyObj, params); } catch (Exception e) { logFailure("onWindowAttributesChanged", e); }
     }
 
     @Override
     public void onWindowFocusChanged(boolean hasFocus) {
         if (m_onWindowFocusChanged == null) return;
-        try { m_onWindowFocusChanged.invoke(mProxyObj, hasFocus); } catch (Exception ignored) {}
+        try { m_onWindowFocusChanged.invoke(mProxyObj, hasFocus); } catch (Exception e) { logFailure("onWindowFocusChanged", e); }
     }
 
     @Override
     public void onBackPressed() {
         if (m_onBackPressed == null) return;
-        try { m_onBackPressed.invoke(mProxyObj); } catch (Exception ignored) {}
+        try { m_onBackPressed.invoke(mProxyObj); } catch (Exception e) { logFailure("onBackPressed", e); }
     }
 
     @Override
     public boolean onCreateOptionsMenu(Menu menu) {
         if (m_onCreateOptionsMenu == null) return false;
-        try { return (Boolean) m_onCreateOptionsMenu.invoke(mProxyObj, menu); } catch (Exception ignored) {}
+        try { return (Boolean) m_onCreateOptionsMenu.invoke(mProxyObj, menu); } catch (Exception e) { logFailure("onCreateOptionsMenu", e); }
         return false;
     }
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
         if (m_onOptionsItemSelected == null) return false;
-        try { return (Boolean) m_onOptionsItemSelected.invoke(mProxyObj, item); } catch (Exception ignored) {}
+        try { return (Boolean) m_onOptionsItemSelected.invoke(mProxyObj, item); } catch (Exception e) { logFailure("onOptionsItemSelected", e); }
         return false;
     }
 }
